Modification du design par l'ajout des traits sur le OR de la page signin et correction de l'alignement du logo de google sur le login form

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,3 +56,7 @@ body::before {}
 .loginSvg {
   @apply absolute left-2 w-4 text-slate-500;
 }
+
+.separator {
+  @apply my-3 w-full text-slate-200 text-center relative before:absolute before:left-0 before:bg-slate-500 before:top-1/2 before:w-[40%] before:h-[1px] after:absolute after:bg-slate-500 after:top-1/2 after:w-[40%] after:h-[1px] after:right-0;
+}
